<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MacroDashboard">

  <Button
      android:id="@+id/backToCurate"
      android:layout_width="169dp"
      android:layout_height="48dp"
      android:backgroundTint="#85F9B5"
      android:text="@string/btoCurate"
      android:textColor="@color/black"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.066"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.127" />

  <ProgressBar
      android:id="@+id/barCalorie"
      style="?android:attr/progressBarStyleHorizontal"
      android:layout_width="364dp"
      android:layout_height="19dp"
      android:progress="23"
      android:progressTint="@color/calorie"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.489"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.342" />

  <TextView
      android:id="@+id/textView10"
      android:layout_width="99dp"
      android:layout_height="29dp"
      android:text="@string/cEaten"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.083"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.287" />

  <ProgressBar
      android:id="@+id/barFat"
      style="?android:attr/progressBarStyleHorizontal"
      android:layout_width="364dp"
      android:layout_height="19dp"
      android:progress="35"
      android:progressTint="@color/fat"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.51"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.601" />

  <TextView
      android:id="@+id/textView17"
      android:layout_width="99dp"
      android:layout_height="29dp"
      android:text="@string/fEaten"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.083"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.551" />

  <TextView
      android:id="@+id/textView18"
      android:layout_width="99dp"
      android:layout_height="29dp"
      android:text="@string/fLeft"
      android:textAlignment="textEnd"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.923"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.551" />

  <ProgressBar
      android:id="@+id/barProtein"
      style="?android:attr/progressBarStyleHorizontal"
      android:layout_width="364dp"
      android:layout_height="19dp"
      android:progress="35"
      android:progressTint="@color/protein"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.489"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.474" />

  <TextView
      android:id="@+id/textView14"
      android:layout_width="99dp"
      android:layout_height="29dp"
      android:text="@string/pLeft"
      android:textAlignment="textEnd"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.926"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.42" />

  <TextView
      android:id="@+id/textView15"
      android:layout_width="99dp"
      android:layout_height="29dp"
      android:text="@string/pEaten"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.083"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.42" />

  <TextView
      android:id="@+id/textView16"
      android:layout_width="99dp"
      android:layout_height="29dp"
      android:text="@string/cLeft"
      android:textAlignment="textEnd"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.926"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.287" />

  <ProgressBar
      android:id="@+id/barCarbs"
      style="?android:attr/progressBarStyleHorizontal"
      android:layout_width="364dp"
      android:layout_height="19dp"
      android:progress="36"
      android:progressTint="@color/carbs"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.731" />

  <TextView
      android:id="@+id/textView19"
      android:layout_width="99dp"
      android:layout_height="29dp"
      android:text="@string/caEaten"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.083"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.685" />

  <TextView
      android:id="@+id/textView20"
      android:layout_width="99dp"
      android:layout_height="29dp"
      android:text="@string/caLeft"
      android:textAlignment="textEnd"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.923"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.685" />

  <TextView
      android:id="@+id/textView"
      android:layout_width="366dp"
      android:layout_height="58dp"
      android:text="@string/dbTitle"
      android:textAlignment="center"
      android:textSize="34sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.488"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.023" />

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="180dp"
      android:layout_height="153dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.949"
      app:srcCompat="@drawable/fancycronometer" />

</androidx.constraintlayout.widget.ConstraintLayout>